--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "dependencies": {
+    "fs": "^0.0.1-security",
     "jquery": "^3.6.0",
     "sass": "^1.48.0"
   },
   "name": "my-portfolio",
   "version": "0.5.0",
   "main": "index.html",
-  "devDependencies": {},
   "scripts": {
     "sass": "sass style.scss style.css"
   },
